<resources>
    <string name="app_name">Local Pride Shop 2</string>
    <string name="conten_text">Deskripsi Sepatu compas vintage green low sepatu compas original
    Available size
    40
    41
    42</string>
    <string name="content_specs_display">1000gr</string>
    <string name="_6_photos">6 Photos</string>
    <string name="rp_652_000_00">Rp.652.000.00</string>
    <string name="deskripsi">Deskripsi :</string>
    <string name="ready_uk_40_pcs">Ready Uk:40 pcs</string>
    <string name="todo">TODO</string>
</resources>